--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 use_frameworks!
 source 'https://cdn.cocoapods.org'
-source 'https://github.com/Kalanhall/kalanrepo.git'
+source 'https://github.com/Kalanhall/Specs.git'
 inhibit_all_warnings!
 
 target 'LoginService_Example' do
